# fynoss

./: .gitignore  Cargo.toml  README.md
migrations/: 20240907062353_init.down.sql  20240907062353_init.up.sql  20240908145658_gh_repo_stars_index.down.sql  20240908145658_gh_repo_stars_index.up.sql
src/: main.rs
src/cli/: migrate.rs
src/internals/: mod.rs
src/internals/ai/: mod.rs
src/internals/ai/controllers/: ai_controller.rs  mod.rs
src/internals/ai/models/: dto.rs
src/internals/ai/routers/: ai_router.rs  mod.rs
src/internals/ai/services/: ai_service.rs
src/internals/ai/usecases/: ai_usecase.rs  mod.rs
src/internals/github/: mod.rs
src/internals/github/controller/: mod.rs  repository_controller.rs
src/internals/github/models/: dto.rs  entity.rs  mod.rs  sea_query.rs
src/internals/github/repositories/: mod.rs  repository_repository.rs
src/internals/github/router/: mod.rs  repository_router.rs
src/internals/github/services/: mod.rs  repository_service.rs
src/internals/github/usecases/: mod.rs  repository_usecase.rs
src/pkg/: mod.rs
src/pkg/ai/client/: client.rs
src/pkg/ai/model/: openai.rs
src/pkg/github/: mod.rs  repositories.rs
src/pkg/github/client/: client.rs
src/pkg/github/model/: model.rs
src/pkg/utils/base64/: base64.rs
